<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/pg2_p1_20_m"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pg2_p1_20_m"
                android:textAppearance="@style/module" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/db2_p2_20_m"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/db_p2_0_tue"
                android:textAppearance="@style/module" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/hci_p2_90_w"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/hci_p1_90_w"
                android:textAppearance="@style/module" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view4"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/bs_p3_50_fr"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/bs_p3_50_fr"
                android:textAppearance="@style/module" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view5"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/pg2_p2_20_m"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pg2_p2_20_m"
                android:textAppearance="@style/module" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view6"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/pg2_p3_20_m"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pg2_p3_20_m"
                android:textAppearance="@style/module" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view7"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/pg2_p4_20_m"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/pg2_p3_20_m"
                android:textAppearance="@style/module" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view8"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/hci_p3_20_m"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/hci_p2_90_w"
                android:textAppearance="@style/module" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view9"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/bs_p4_50_fr"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/bs_p3_50_fr"
                android:textAppearance="@style/module" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>